--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        look mama.i am using github
-    </h1>
+    <h2>this is my first github project</h2>
+    <h1>look mama.i am using github</h1>
 </body>
 </html>
