--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h2>this is my first github project</h2>
     <h1>look mama.i am using github</h1>
+    <h1>i luv allah</h1>
 </body>
 </html>
