--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h2>this is my first github project</h2>
     <h1>look mama.i am using github</h1>
     <h1>i luv allah</h1>
+    <img src="vk.jpg">
 </body>
 </html>
