learning about second branch]

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>look mama.i am using github</h1>
     <h1>i luv allah</h1>
     <img src="vk.jpg">
+    <p>talking about the branch</p>
+    <p>thid line added in the second branch</p>
 </body>
 </html>
